--- a/Flask-template/templates/index.html
+++ b/Flask-template/templates/index.html
@@ -56,7 +56,7 @@
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                            <i class="fas fa-eye fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Hawkeye</h4>
                         <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
@@ -64,7 +64,7 @@
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
+                            <i class="fas fa-chart-pie fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Player Statistics</h4>
                         <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
@@ -72,7 +72,7 @@
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
+                            <i class="fas fa-walking fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Performance Analyses</h4>
                         <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
@@ -248,7 +248,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">The Team</h2>
-                    <h3 class="section-subheading text-muted">Colorado Native studying computer science at UCL</h3>
+                    <h3 class="section-subheading text-muted">Colorado native studying computer science at UCL</h3>
                 </div>
                 <div class="row">
                     <div class="col-12">
