--- a/Flask-template/templates/index.html
+++ b/Flask-template/templates/index.html
@@ -24,9 +24,9 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">AI Powered Performance Enhancer</div>
+                <div class="masthead-subheading">Imroving performance through the tower of AI</div>
                 <div class="masthead-heading text-uppercase">Tennis Sense</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="#services">Register</a>
+                <a class="btn btn-primary btn-xl text-uppercase" href="{{ url_for('register') }}">Register</a>
             </div>
         </header>
         <!-- Services-->
