--- a/Flask-template/static/css/styles.css
+++ b/Flask-template/static/css/styles.css
@@ -51,6 +51,7 @@
 
 body {
   margin: 0;
+  height: 100%;
   font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1rem;
   font-weight: 400;
