login modal and icons
added login modals, icons and borders for cards

--- a/Flask-template/templates/home.html
+++ b/Flask-template/templates/home.html
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link active" href="#">Home</a>
+          <a class="nav-link active" href="#"><i class="fas fa-home fa-lg"></i></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Link 2</a>
@@ -21,13 +21,14 @@
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
             <div class="container">
-            <a class="btn btn-outline-secondary btn-sm text-uppercase" href="">Logout</a>
+            <a class="btn btn-outline-secondary btn-sm text-uppercase" href=""><i class="fas fa-sign-out-alt fa-lg"></i>Logout</a>
             </div>
         </li>
     </ul>
     </div>
   </nav>
 <div class="container-fluid">
+<br>
 <div calss="row">
     <div class="container d-flex justify-content-center">
         <h2>Welcome</h2>
@@ -35,22 +36,32 @@
 </div>
 </div>
 <div class="container-fluid">
+<br>
 <div class="row">
     <div class="col-md-4">
-        <div class="container d-flex justify-content-center">
-            <a class="btn btn-primary btn-xl text-uppercase" href="">Hawkeye</a>
+        <div class="container home">
+            <a class="btn btn-primary btn-xl text-uppercase d-flex justify-content-center" href="">Hawkeye</a>
+            <br>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis voluptatem deserunt blanditiis soluta et odio quod eum 
+              inventore ad atque pariatur nam, repellendus fuga ducimus debitis necessitatibus nulla perferendis ipsa.</p>
         </div>
         <br>
     </div>
     <div class="col-md-4">
-        <div class="container d-flex justify-content-center">
-            <a class="btn btn-primary btn-xl text-uppercase" href="{{ url_for('point') }}">Point Analysis</a>
+        <div class="container home">
+            <a class="btn btn-primary btn-xl text-uppercase d-flex justify-content-center" href="{{ url_for('point') }}">Point Analysis</a>
+            <br>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis voluptatem deserunt blanditiis soluta et odio quod eum 
+              inventore ad atque pariatur nam, repellendus fuga ducimus debitis necessitatibus nulla perferendis ipsa.</p>
         </div>
         <br>
     </div>
     <div class="col-md-4">
-        <div class="container d-flex justify-content-center">
-            <a class="btn btn-primary btn-xl text-uppercase" href="">Stroke Analysis</a>
+        <div class="container home">
+            <a class="btn btn-primary btn-xl text-uppercase d-flex justify-content-center" href="">Stroke Analysis</a>
+            <br>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis voluptatem deserunt blanditiis soluta et odio quod eum 
+              inventore ad atque pariatur nam, repellendus fuga ducimus debitis necessitatibus nulla perferendis ipsa.</p>
         </div>
         <br>
     </div>
