--- a/Flask-template/templates/layout.html
+++ b/Flask-template/templates/layout.html
@@ -16,6 +16,7 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}" />
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}" />
 
     <title>{{ app_data['html_title'] }}</title>
   
