--- a/Flask-template/templates/point.html
+++ b/Flask-template/templates/point.html
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('home') }}">Home</a>
+          <a class="nav-link" href="{{ url_for('home') }}"><i class="fas fa-home fa-lg"></i></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Link 2</a>
@@ -21,7 +21,7 @@
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
             <div class="container">
-            <a class="btn btn-outline-secondary btn-sm text-uppercase" href="">Logout</a>
+            <a class="btn btn-outline-secondary btn-sm text-uppercase" href=""><i class="fas fa-sign-out-alt fa-lg"></i>Logout</a>
             </div>
         </li>
     </ul>
