--- a/Flask-template/templates/home.html
+++ b/Flask-template/templates/home.html
@@ -39,7 +39,7 @@
 <br>
 <div class="row">
     <div class="col-md-4">
-        <div class="container home">
+        <div class="container rounded home">
             <a class="btn btn-primary btn-xl text-uppercase d-flex justify-content-center" href="">Hawkeye</a>
             <br>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis voluptatem deserunt blanditiis soluta et odio quod eum 
@@ -48,7 +48,7 @@
         <br>
     </div>
     <div class="col-md-4">
-        <div class="container home">
+        <div class="container rounded home">
             <a class="btn btn-primary btn-xl text-uppercase d-flex justify-content-center" href="{{ url_for('point') }}">Point Analysis</a>
             <br>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis voluptatem deserunt blanditiis soluta et odio quod eum 
@@ -57,7 +57,7 @@
         <br>
     </div>
     <div class="col-md-4">
-        <div class="container home">
+        <div class="container rounded home">
             <a class="btn btn-primary btn-xl text-uppercase d-flex justify-content-center" href="">Stroke Analysis</a>
             <br>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis voluptatem deserunt blanditiis soluta et odio quod eum 
