--- a/Flask-template/templates/home.html
+++ b/Flask-template/templates/home.html
@@ -30,8 +30,9 @@
 <div class="container-fluid">
 <br>
 <div calss="row">
-    <div class="container d-flex justify-content-center">
-        <h2>Welcome</h2>
+    <div class="container">
+        <h2 class="text-center">Welcome {{name}}</h2>
+        <h3>Number of backhands: {{backhand}}</h3>
     </div>
 </div>
 </div>
@@ -66,6 +67,20 @@
         <br>
     </div>
 </div>
+</div>
+<div class="container-fluid">
+ <div class="row">
+   <div class="container col-md-4">
+     <div class="container rounded home">
+    <h4 class="text-center">Shots hit in order:</h4>
+      <ol>
+      {% for shot in strokes%}
+      <li>{{shot}}</li>
+      {% endfor %}
+    </ol>
+  </div>
+   </div>
+ </div>
 </div>
 
 {% endblock %}
