--- a/Flask-template/templates/layout.html
+++ b/Flask-template/templates/layout.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="{{ app_data['description'] }}">
-    <meta name="keywords" content="{{ app_data['keywords'] }}">
-    <meta name="author" content="{{ app_data['author'] }}">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+    <meta name="author" content="">
     <title>Agency - Start Bootstrap Theme</title>
         <!-- Favicon-->
         <link rel="shortcut icon" href="{{ url_for('static', filename='assets/favicon.ico') }}"/>
@@ -15,10 +15,10 @@
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}" />
         <link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}" />
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}" />
 
-    <title>{{ app_data['html_title'] }}</title>
+    <title></title>
   
   <body>
 
