--- a/Flask-template/templates/point.html
+++ b/Flask-template/templates/point.html
@@ -29,18 +29,18 @@
   </nav>
   <div class="container-fluid">
     <br>
-    <div class="row">
-        <div class="containter d-flex justify-content-center">
-            <h1>Point Analysis</h1>
-        </div>
-        <div class="containter d-flex justify-content-center">
-            <h5>Please upload a point to view results for AI powered analysis</h5>
-        </div>
-    </div>
+    <div class="container-fluid text-center">
+      <div class="containter mb-2">
+        <legend class='border-bottom h1'>Point Analysis</legend>
+      </div>
+      </div>
     <br>
 </div>
-  <div class="container-fluid d-flex justify-content-center">
-        <form class="text-center" style="width: 65%;">
+  <div class="container home shadow rounded p-4 mt-4 text-center">
+    <div class="containter mb-4">
+      <h5>Please upload a point to view results for AI powered analysis</h5>
+   </div>
+        <form class="container col-md-8 text-center">
             <div class="form-group">
                 <label for="date">Date of Point</label>
                 <input class="form-control" type="date" id="date" name="date">
