adding point form via flask forms method

--- a/Flask-template/templates/point.html
+++ b/Flask-template/templates/point.html
@@ -27,14 +27,15 @@
     </ul>
     </div>
   </nav>
+  <!-- end of navbar -->
+
   <div class="container-fluid">
     <br>
     <div class="container-fluid text-center">
-      <div class="containter mb-2">
+      <div class="containter">
         <legend class='border-bottom h1'>Point Analysis</legend>
       </div>
       </div>
-    <br>
 </div>
   <div class="container home shadow rounded p-4 mt-4 text-center">
     <div class="containter mb-4">
