adding stroke form

--- a/Flask-template/templates/home.html
+++ b/Flask-template/templates/home.html
@@ -58,7 +58,7 @@ l{% extends 'layout.html' %}
     </div>
     <div class="col-md-4">
         <div class="container rounded home shadow pt-2">
-            <a class="btn btn-primary btn-xl text-uppercase d-flex justify-content-center" href="">Stroke Analysis</a>
+            <a class="btn btn-primary btn-xl text-uppercase d-flex justify-content-center" href="{{ url_for('stroke') }}">Stroke Analysis</a>
             <br>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis voluptatem deserunt blanditiis soluta et odio quod eum 
               inventore ad atque pariatur nam, repellendus fuga ducimus debitis necessitatibus nulla perferendis ipsa.</p>
