--- a/Flask-template/templates/home.html
+++ b/Flask-template/templates/home.html
@@ -2,31 +2,33 @@ l{% extends 'layout.html' %}
 
 {% block body %}
 <nav class="navbar sticky-top navbar-expand-sm navbar-light bg-light">
-    <a class="navbar-brand" href="#" style="margin-left: 2%;">Tennis Sense</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link active" href="#"><i class="fas fa-home fa-lg"></i></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link 2</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link 3</a>
-        </li>
-      </ul>
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-            <div class="container">
-            <a class="btn btn-outline-secondary btn-sm text-uppercase" href="{{url_for('logout')}}"><i class="fas fa-sign-out-alt fa-lg"></i>Logout</a>
-            </div>
-        </li>
+  <a class="navbar-brand" href="#" style="margin-left: 2%;">Tennis Sense</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="{{ url_for('home') }}">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link 2</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link 3</a>
+      </li>
     </ul>
-    </div>
-  </nav>
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+          <div class="container">
+          <a class="btn btn-outline-secondary btn-sm text-uppercase" href="{{url_for('logout')}}"><i class="fas fa-sign-out-alt fa-lg"></i>Logout</a>
+          </div>
+      </li>
+  </ul>
+  </div>
+</nav>
+  <!-- end of nav-->
+
 <div class="container-fluid">
 <br>
 <div calss="row">
