--- a/Flask-template/templates/point.html
+++ b/Flask-template/templates/point.html
@@ -9,22 +9,26 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('home') }}"><i class="fas fa-home fa-lg"></i></a>
+          <a class="nav-link" href="{{ url_for('home') }}">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Link 2</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="#">Link 3</a>
+          <a class="nav-link active" href="{{url_for('point')}}">Link 3</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{url_for('stroke')}}">Link 4</a>
         </li>
       </ul>
-      <ul class="navbar-nav ms-auto">
+      <ul class="navbar-nav ml-auto">
         <li class="nav-item">
             <div class="container">
-            <a class="btn btn-outline-secondary btn-sm text-uppercase" href=""><i class="fas fa-sign-out-alt fa-lg"></i>Logout</a>
+            <a class="btn btn-outline-secondary btn-sm text-uppercase" href="{{url_for('logout')}}"><i class="fas fa-sign-out-alt fa-lg"></i>Logout</a>
             </div>
         </li>
     </ul>
+    
     </div>
   </nav>
   <!-- end of navbar -->
