--- a/Flask-template/templates/graphs.html
+++ b/Flask-template/templates/graphs.html
@@ -44,7 +44,15 @@
             <canvas id="myChart" max-width="300" max-height="300"></canvas>
         </div>
         <div class="col-md-6">
-            <canvas id="myChart2" max-width="200" max-height="200"></canvas>
+            <canvas id="myChart2" max-width="300" max-height="300"></canvas>
+        </div>
+    </div>
+    <div class='row mt-4'>
+        <div class="col-md-6">
+            <canvas id="myChart3" max-width="300" max-height="300"></canvas>
+        </div>
+        <div class="col-md-6">
+            <canvas id="myChart4" max-width="300" max-height="300"></canvas>
         </div>
     </div>
 </div>
@@ -131,6 +139,85 @@ var myChart = new Chart(ctx, {
         }]
     },
     options: {
+        scales: {
+            y: {
+                beginAtZero: true
+            }
+        }
+    }
+});
+</script>
+
+<script>
+    var ctx = document.getElementById('myChart3').getContext('2d');
+var myChart = new Chart(ctx, {
+    type: 'doughnut',
+    data: {
+        labels: ['1', '2', '3', '4', '5', '6'],
+        datasets: [{
+            label: 'Left leg angle during extension',
+            data: [130, 140, 160, 170, 175, 170],
+            backgroundColor: [
+                'rgba(255, 99, 132, 0.2)',
+                'rgba(54, 162, 235, 0.2)',
+                'rgba(255, 206, 86, 0.2)',
+                'rgba(75, 192, 192, 0.2)',
+                'rgba(153, 102, 255, 0.2)',
+                'rgba(255, 159, 64, 0.2)'
+            ],
+            borderColor: [
+                'rgba(255, 99, 132, 1)',
+                'rgba(54, 162, 235, 1)',
+                'rgba(255, 206, 86, 1)',
+                'rgba(75, 192, 192, 1)',
+                'rgba(153, 102, 255, 1)',
+                'rgba(255, 159, 64, 1)'
+            ],
+            borderWidth: 1
+        }]
+    },
+    options: {
+        responsive: false,
+
+        scales: {
+            y: {
+                beginAtZero: true
+            }
+        }
+    }
+});
+</script>
+<script>
+    var ctx = document.getElementById('myChart4').getContext('2d');
+var myChart = new Chart(ctx, {
+    type: 'radar',
+    data: {
+        labels: ['1', '2', '3', '4', '5', '6'],
+        datasets: [{
+            label: 'Left leg angle during extension',
+            data: [130, 140, 160, 170, 175, 170],
+            backgroundColor: [
+                'rgba(255, 99, 132, 0.2)',
+                'rgba(54, 162, 235, 0.2)',
+                'rgba(255, 206, 86, 0.2)',
+                'rgba(75, 192, 192, 0.2)',
+                'rgba(153, 102, 255, 0.2)',
+                'rgba(255, 159, 64, 0.2)'
+            ],
+            borderColor: [
+                'rgba(255, 99, 132, 1)',
+                'rgba(54, 162, 235, 1)',
+                'rgba(255, 206, 86, 1)',
+                'rgba(75, 192, 192, 1)',
+                'rgba(153, 102, 255, 1)',
+                'rgba(255, 159, 64, 1)'
+            ],
+            borderWidth: 1
+        }]
+    },
+    options: {
+        responsive: false,
+
         scales: {
             y: {
                 beginAtZero: true
