--- a/Flask_template/templates/graphs.html
+++ b/Flask_template/templates/graphs.html
@@ -77,7 +77,7 @@
 
 
 <script>
-
+// Plotting graphs
 var ctx = document.getElementById('myChart').getContext('2d');
 var myChart = new Chart(ctx, {
     type: 'line',
@@ -116,6 +116,7 @@ var myChart = new Chart(ctx, {
 </script>
 
 <script>
+// PLOTTING GRAPH
     var ctx = document.getElementById('myChart2').getContext('2d');
 var myChart = new Chart(ctx, {
     type: 'bar',
@@ -154,6 +155,7 @@ var myChart = new Chart(ctx, {
 </script>
 
 <script>
+// PLOTTING GRAPH
     var ctx = document.getElementById('myChart3').getContext('2d');
 var myChart = new Chart(ctx, {
     type: 'doughnut',
@@ -193,6 +195,7 @@ var myChart = new Chart(ctx, {
 });
 </script>
 <script>
+// PLOTTING GRAPH
     var ctx = document.getElementById('myChart4').getContext('2d');
 var myChart = new Chart(ctx, {
     type: 'radar',
