--- a/Flask_template/templates/graphs.html
+++ b/Flask_template/templates/graphs.html
@@ -53,6 +53,7 @@
             <canvas id="myChart3" max-width="300" max-height="300"></canvas>
         </div>
         <div class="col-md-6">
+            <legend class='border-bottom h6'>Your shot breakdown (%)</legend>
             <canvas id="myChart4" max-width="300" max-height="300"></canvas>
         </div>
     </div>
@@ -197,14 +198,14 @@ var myChart = new Chart(ctx, {
 </script>
 <script>
 // PLOTTING GRAPH
-    var ctx = document.getElementById('myChart4').getContext('2d');
+var ctx = document.getElementById('myChart4').getContext('2d');
 var myChart = new Chart(ctx, {
-    type: 'radar',
+    type: 'doughnut',
     data: {
-        labels: ['1', '2', '3', '4', '5', '6'],
+        labels: ['Start', 'Takeback and Load', 'Extend', 'Finish'],
         datasets: [{
             label: 'Left leg angle during extension',
-            data: [130, 140, 160, 170, 175, 170],
+            data: {{doughnut_data|tojson}},
             backgroundColor: [
                 'rgba(255, 99, 132, 0.2)',
                 'rgba(54, 162, 235, 0.2)',
