--- a/Flask_template/templates/graphs.html
+++ b/Flask_template/templates/graphs.html
@@ -41,6 +41,7 @@
     </div>
     <div class='row mt-4'>
         <div class="col-md-6">
+            <legend class='border-bottom h6'>{{name}} angles for right and left {{body}}</legend>
             <canvas id="myChart" max-width="300" max-height="300"></canvas>
         </div>
         <div class="col-md-6">
@@ -84,28 +85,32 @@ var ctx = document.getElementById('myChart').getContext('2d');
 var myChart = new Chart(ctx, {
     type: 'line',
     data: {
-        labels: {{labels|tojson}},
+                
+        labels: {{label|tojson}},
         datasets: [{
-            label: 'graph title',
+            label: 'Right Leg',
             data: {{data|tojson}},
             backgroundColor: [
                 'rgba(255, 99, 132, 0.2)',
-                'rgba(54, 162, 235, 0.2)',
-                'rgba(255, 206, 86, 0.2)',
-                'rgba(75, 192, 192, 0.2)',
-                'rgba(153, 102, 255, 0.2)',
-                'rgba(255, 159, 64, 0.2)'
             ],
             borderColor: [
                 'rgba(255, 99, 132, 1)',
-                'rgba(54, 162, 235, 1)',
-                'rgba(255, 206, 86, 1)',
-                'rgba(75, 192, 192, 1)',
-                'rgba(153, 102, 255, 1)',
-                'rgba(255, 159, 64, 1)'
             ],
-            borderWidth: 1
-        }]
+            borderWidth: 1, 
+            fill: true,
+        }, {
+            label: 'Left Leg',
+            data: {{datatwo|tojson}},
+            backgroundColor: [
+                'rgba(0, 99, 132, 0.2)',
+            ],
+            borderColor: [
+                'rgba(0, 99, 132, 1)',
+            ],
+            borderWidth: 1, 
+            fill: true,
+        }
+        ]
     },
     options: {
         scales: {
