added player graph for angle

--- a/Flask_template/templates/graphs.html
+++ b/Flask_template/templates/graphs.html
@@ -45,6 +45,7 @@
             <canvas id="myChart" max-width="300" max-height="300"></canvas>
         </div>
         <div class="col-md-6">
+            <legend class='border-bottom h6'>Your angles for right and left {{body}}</legend>
             <canvas id="myChart2" max-width="300" max-height="300"></canvas>
         </div>
     </div>
@@ -123,33 +124,37 @@ var myChart = new Chart(ctx, {
 </script>
 
 <script>
-// PLOTTING GRAPH
-    var ctx = document.getElementById('myChart2').getContext('2d');
+// Plotting graphs
+var ctx = document.getElementById('myChart2').getContext('2d');
 var myChart = new Chart(ctx, {
-    type: 'bar',
+    type: 'line',
     data: {
-        labels: ['1', '2', '3', '4', '5', '6'],
+                
+        labels: {{label|tojson}},
         datasets: [{
-            label: 'title',
-            data: [130, 140, 160, 170, 175, 170],
+            label: 'Right Leg',
+            data: {{data|tojson}},
             backgroundColor: [
                 'rgba(255, 99, 132, 0.2)',
-                'rgba(54, 162, 235, 0.2)',
-                'rgba(255, 206, 86, 0.2)',
-                'rgba(75, 192, 192, 0.2)',
-                'rgba(153, 102, 255, 0.2)',
-                'rgba(255, 159, 64, 0.2)'
             ],
             borderColor: [
                 'rgba(255, 99, 132, 1)',
-                'rgba(54, 162, 235, 1)',
-                'rgba(255, 206, 86, 1)',
-                'rgba(75, 192, 192, 1)',
-                'rgba(153, 102, 255, 1)',
-                'rgba(255, 159, 64, 1)'
             ],
-            borderWidth: 1
-        }]
+            borderWidth: 1, 
+            fill: true,
+        }, {
+            label: 'Left Leg',
+            data: {{datatwo|tojson}},
+            backgroundColor: [
+                'rgba(0, 99, 132, 0.2)',
+            ],
+            borderColor: [
+                'rgba(0, 99, 132, 1)',
+            ],
+            borderWidth: 1, 
+            fill: true,
+        }
+        ]
     },
     options: {
         scales: {
