--- a/Flask_template/templates/layout.html
+++ b/Flask_template/templates/layout.html
@@ -21,7 +21,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.4.1/chart.min.js"> </script>
 
     <title></title>
-  <body style="font-family:Georgia, 'Times New Roman', Times, serif">
+  <body style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">
     
           {% block body %}
 
