--- a/Flask_template/templates/stroke.html
+++ b/Flask_template/templates/stroke.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-<nav class="navbar sticky-top navbar-expand-sm navbar-light bg-light">
+<nav class="navbar sticky-top navbar-expand-sm navbar-dark bg-dark">
     <a class="navbar-brand" href="#" style="margin-left: 2%;">Tennis Sense</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -24,7 +24,7 @@
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
             <div class="container">
-            <a class="btn btn-outline-secondary btn-sm text-uppercase" href="{{url_for('logout')}}"><i class="fas fa-sign-out-alt fa-lg"></i>Logout</a>
+            <a class="btn btn-secondary btn-sm text-uppercase" href="{{url_for('logout')}}"><i class="fas fa-sign-out-alt fa-lg"></i>Logout</a>
             </div>
         </li>
     </ul>
