--- a/Flask_template/templates/stroke.html
+++ b/Flask_template/templates/stroke.html
@@ -32,6 +32,8 @@
   </nav>
   <!-- end of navbar -->
 
+
+  <!-- start of content that hides on click -->
   <div class="container-fluid">
     <br>
     <div class="container-fluid text-center">
@@ -40,9 +42,10 @@
       </div>
       </div>
 </div>
-  
+
 
   <div class="container home shadow rounded p-4 mt-4 text-center">
+    <div id="content">
     <div class="containter mb-4">
       <h5>Please upload a video of the desired stroke you wish to analyze</h5>
       <p>Important Note: Click <a href="">here</a> for instructions on how to crop video before submission.</p>
@@ -70,8 +73,33 @@
             <label for="exampleFormControlFile1">Example file input</label>
             <input class='form-control' type="file" class="form-control-file" id="exampleFormControlFile1">
           </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="submit" class="btn btn-primary" id="stroke_submit" onclick="loading();">Submit</button>
         </form>
+      </div>
+      <!-- Loading bar -->
+      <div class='container-fluid text-center mt-5' id="loading" style="display:none"></div>
+      <div id='process' style="display:none" class="container-fluid text-center mt-2">
+        <p>Processing data</p>
+      </div>
+
   </div>
+
+
+  
+  <script type="text/javascript">// <![CDATA[
+    $(document).ready(function(){
+      $("#stroke_submit").click(function(){
+        $("#content").hide();
+      });
+      $("#stroke_submit").click(function(){
+        $("#process").show();
+      });
+      $("#stroke_submit").click(function(){
+        $("#loading").show();
+      });
+    });
+  </script>
+
+
 
 {% endblock %}
